--- a/trunk/PrevNarin.lpi
+++ b/trunk/PrevNarin.lpi
@@ -38,7 +38,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="8">
+    <Units Count="9">
       <Unit0>
         <Filename Value="prevnarin.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -94,6 +94,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="charencstreams"/>
       </Unit7>
+      <Unit8>
+        <Filename Value="PNTranslate.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="PNTranslate"/>
+      </Unit8>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
